-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7
-
dc03949ce (dev), 6b3961c94 (6.8)
Setting the environment variable QML_IMPORT_TRACE=1, we get messages like
qt.qml.import: addLibraryImport: qrc:/MyApp/main.qml "QtQuick" version ' invalid ' as ""
The word "invalid" can give the impression that a problem has occurred. Since it is perfectly valid (and recommended) to write "import QtQuick" instead of "import QtQuick 2.15", I suggest changing the log message (perhaps "unversioned" instead of "invalid")
For Gerrit Dashboard: QTBUG-107493 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
566910,1 | WIP: Avoid 'invalid version' messages in import trace | dev | qt/qtdeclarative | Status: NEW | -2 | +1 |
583660,5 | QtQml: Fix confusing version logging | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
584670,2 | QtQml: Fix confusing version logging | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |