QtQml: Fix confusing version logging

Task-number: QTBUG-107493
Pick-to: 6.8
Change-Id: I5459d678bc9dda60b27ace667fa4b7b2b8fe3527
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>